add_sources(
	aghudcountdown.cpp
    aghudcountdown.h
    aghudctf.cpp
    aghudctf.h
    aghudglobal.cpp
    aghudglobal.h
    aghudlocation.cpp
    aghudlocation.h
    aghudlongjump.cpp
    aghudlongjump.h
    aghudnextmap.cpp
    aghudnextmap.h
    aghudplayerid.cpp
    aghudplayerid.h
    aghudsettings.cpp
    aghudsettings.h
    aghudsuddendeath.cpp
    aghudsuddendeath.h
    aghudtimeout.cpp
    aghudtimeout.h
    aghudvote.cpp
    aghudvote.h
    aglocation.cpp
    aglocation.h
    ammo.h
    ammohistory.cpp
    ammohistory.h
	appversion.h
    camera.h
    cdll_int.cpp
    CHudAmmo.cpp
    CHudAmmo.h
    CHudAmmoSecondary.cpp
    CHudAmmoSecondary.h
    CHudBase.cpp
    CHudBase.h
    CHudBattery.cpp
    CHudBattery.h
    CHud.cpp
	CHudCrosshair.h
	CHudCrosshair.cpp
    CHudDeathNotice.cpp
    CHudDeathNotice.h
    CHudFlashlight.cpp
    CHudFlashlight.h
    CHudGeiger.cpp
    CHudGeiger.h
    CHudHealth.cpp
    CHudHealth.h
    CHudMenu.cpp
    CHudMenu.h
    CHudMessage.cpp
    CHudMessage.h
    CHudSayText.cpp
    CHudSayText.h
    CHudScores.cpp
    CHudScores.h
    CHudSpectator.cpp
    CHudSpectator.h
    CHudStatusBar.cpp
    CHudStatusBar.h
    CHudStatusIcons.cpp
    CHudStatusIcons.h
    CHudTextMessage.cpp
    CHudTextMessage.h
    CHudTimer.cpp
    CHudTimer.h
    CHudTrain.cpp
    CHudTrain.h
    cl_dll.dsp
    cl_dll.h
    cl_util.h
    CMakeLists.txt
    com_weapons.cpp
    com_weapons.h
    demo.cpp
    demo.h
	dllexport.h
    entity.cpp
    ev_common.cpp
    events.cpp
    eventscripts.h
    ev_hldm.cpp
    ev_hldm.h
    GameStudioModelRenderer.cpp
    GameStudioModelRenderer.h
    hud.h
    hud_iface.h
    hud_msg.cpp
    hud_redraw.cpp
    hud_servers.cpp
    hud_servers.h
    hud_servers_priv.h
    hud_update.cpp
    in_defs.h
    input.cpp
    kbutton.h
    net.h
    #overview.cpp   # Disabled?
    #overview.h
    parsemsg.cpp
    parsemsg.h
    readme.txt
    results.cpp
    results.h
    StudioModelRenderer.cpp
    StudioModelRenderer.h
    studio_util.cpp
    studio_util.h
    svc_messages.cpp
    svc_messages.h
    tf_defs.h
    tri.cpp
    util.cpp
    util_vector.h
    vgui_ClassMenu.cpp
    vgui_ConsolePanel.cpp
    vgui_ConsolePanel.h
    vgui_ControlConfigPanel.cpp
    vgui_ControlConfigPanel.h
    vgui_CustomObjects.cpp
    vgui_int.cpp
    vgui_int.h
    vgui_MOTDWindow.cpp
    vgui_SchemeManager.cpp
    vgui_SchemeManager.h
    vgui_ScorePanel.cpp
    vgui_ScorePanel.h
    vgui_ServerBrowser.cpp
    vgui_ServerBrowser.h
    vgui_SpectatorPanel.cpp
    vgui_SpectatorPanel.h
    vgui_TeamFortressViewport.cpp
    vgui_TeamFortressViewport.h
    vgui_teammenu.cpp
    view.cpp
    view.h
    wrect.h
    ../dlls/com_utils.h
    ../dlls/com_utils.cpp
    ../dlls/path.h
    ../dlls/crossbow.cpp
    ../dlls/crowbar.cpp
    ../dlls/egon.cpp
    ../dlls/gauss.cpp
    ../dlls/handgrenade.cpp
    ../dlls/hornetgun.cpp
    ../dlls/mp5.cpp
    ../dlls/path.cpp
    ../dlls/python.cpp
    ../dlls/rpg.cpp
    ../dlls/satchel.cpp
    ../dlls/shotgun.cpp
    ../dlls/squeakgrenade.cpp
    ../dlls/tripmine.cpp
    memory.h
    memory_common.cpp
)

if( MSVC )
    add_sources(
        inputw32.cpp
        in_camera.cpp
        soundsystem.cpp
        net.cpp
        memory_win32.cpp
		client.rc
		resource.h
    )
else()
    add_sources(
        inputw32_sdl.cpp
        in_camera_sdl.cpp
        memory_linux.cpp
    )
endif()

if( MSVC )
    add_subdirectory( dinput )
endif()
add_subdirectory( hl )
add_subdirectory( jpeg )
add_subdirectory( lodepng )
add_subdirectory( ${CMAKE_SOURCE_DIR}/dlls/wpn_shared wpn_shared)
add_subdirectory( ${CMAKE_SOURCE_DIR}/dlls/pcre pcre)

if( USE_VGUI2 )
	add_sources(
		clientsteamcontext.h
		clientsteamcontext.cpp
	)

	add_subdirectory( vgui2 )
endif()

if( USE_UPDATER )
	add_sources(
		CUpdateNotification.h
		CUpdateNotification.cpp
	)
endif()
