add_sources(
    activity.h
    activitymap.h
    aflock.cpp
    agrunt.cpp
    airtank.cpp
    animating.cpp
    animation.cpp
    animation.h
    apache.cpp
    appversion.h
    barnacle.cpp
    barney.cpp
    basemonster.h
    bigmomma.cpp
    bloater.cpp
    bmodels.cpp
    bullsquid.cpp
    buttons.cpp
    cbase.cpp
    cbase.h
    cdll_dll.h
    client.cpp
    client.h
    combat.cpp
    com_utils.cpp
    com_utils.h
    controller.cpp
    crossbow.cpp
    crowbar.cpp
    decals.h
    defaultai.cpp
    defaultai.h
    doors.cpp
    doors.h
    effects.cpp
    effects.h
    egon.cpp
    enginecallback.h
    explode.cpp
    explode.h
    extdll.h
    flyingmonster.cpp
    flyingmonster.h
    func_break.cpp
    func_break.h
    func_tank.cpp
    game.cpp
    game.h
    gamerules.cpp
    gamerules.h
    gargantua.cpp
    gauss.cpp
    genericmonster.cpp
    ggrenade.cpp
    globals.cpp
    gman.cpp
    h_ai.cpp
    handgrenade.cpp
    hassassin.cpp
    h_battery.cpp
    h_cine.cpp
    h_cycler.cpp
    headcrab.cpp
    healthkit.cpp
    h_export.cpp
    hgrunt.cpp
    hl.def
    hornet.cpp
    hornetgun.cpp
    hornet.h
    houndeye.cpp
    ichthyosaur.cpp
    islave.cpp
    items.cpp
    items.h
    leech.cpp
    lights.cpp
    maprules.cpp
    maprules.h
    monsterevent.h
    monstermaker.cpp
    monsters.cpp
    monsters.h
    monsterstate.cpp
    mortar.cpp
    mp5.cpp
    multiplay_gamerules.cpp
    nihilanth.cpp
    nodes.cpp
    nodes.h
    observer.cpp
    osprey.cpp
    pathcorner.cpp
    path.cpp
    path.h
    plane.cpp
    plane.h
    plats.cpp
    player.cpp
    player.h
    playermonster.cpp
    python.cpp
    rat.cpp
    roach.cpp
    rpg.cpp
    satchel.cpp
    saverestore.h
    schedule.cpp
    schedule.h
    scientist.cpp
    scripted.cpp
    scripted.h
    scriptevent.h
    shotgun.cpp
    singleplay_gamerules.cpp
    skill.cpp
    skill.h
    sound.cpp
    soundent.cpp
    soundent.h
    spectator.cpp
    spectator.h
    squad.h
    squadmonster.cpp
    squadmonster.h
    squeakgrenade.cpp
    stats.cpp
    subs.cpp
    talkmonster.cpp
    talkmonster.h
    teamplay_gamerules.cpp
    teamplay_gamerules.h
    tempmonster.cpp
    tentacle.cpp
    trains.h
    triggers.cpp
    tripmine.cpp
    turret.cpp
    util.cpp
    util.h
    vector.h
    weapons.cpp
    weapons.h
    world.cpp
    wxdebug.h
    xen.cpp
    zombie.cpp
)

if(WIN32)
    add_sources(
        Wxdebug.cpp
		hl.rc
		resource.h
    )
endif()

add_subdirectory( wpn_shared )
