add_sources(
	CMakeLists.txt
	CAdvOptionsDialog.h
	CAdvOptionsDialog.cpp
	
	CHudSubOptions.h
	CHudSubOptions.cpp
	CChatSubOptions.h
	CChatSubOptions.cpp
	CCrosshairSubOptions.h
	CCrosshairSubOptions.cpp
	CScoreboardSubOptions.h
	CScoreboardSubOptions.cpp
	CGeneralSubOptions.h
	CGeneralSubOptions.cpp
	CAboutSubOptions.h
	CAboutSubOptions.cpp
	
	CCvarTextEntry.h
	CCvarTextEntry.cpp
	CCvarSlider.h
	CCvarSlider.cpp
	CColorPicker.h
	CColorPicker.cpp
	CCvarColor.h
	CCvarColor.cpp
	CCvarCheckButton.h
	CCvarCheckButton.cpp
)

add_subdirectory( colorpicker )
